# EKLAVYA_PROTOTYPE

./: .env.development  .env.example  .env.staging  .env.test  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  deploy-production.yml  deploy-staging.yml
alembic/: env.py
alembic/__pycache__/: env.cpython-313.pyc.2346805222560
alembic/versions/: 20260402_01_create_uadp.py  20260402_02_create_performance.py  20260402_03_create_injury.py  20260402_04_create_career.py  20260402_05_create_financial.py  20260402_06_auth_gateway.py  20260403_07_create_ml_models.py  20260403_08_create_files.py
app/: main.py
app/__pycache__/: __init__.cpython-313.pyc.2346799932080  main.cpython-313.pyc.1679948114096  main.cpython-313.pyc.2346805222560
app/auth/: models.py  router.py  schemas.py  service.py
app/backup/: tasks.py
app/career/: README.md  models.py  router.py  schemas.py  service.py  tasks.py
app/core/: auth.py  celery_app.py  config.py  consent.py  (+7 more)
athleteos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API_OVERVIEW.md
test_dbs/: seed-idempotent-a8b1cfad1e464fafb3265e82784590b7.db-journal  seed-run-30a6c32594c9453ca8661f2656cf2081.db-journal  seeded-a5d9b46d07cf4ef1a08f694f26e8cfe5.db-journal
tests/: conftest.py  test_backup_and_recovery.py  test_career.py  test_config_and_secrets.py  test_files.py  test_financial.py  test_gateway_auth.py  test_injury.py  test_ml.py  test_observability.py  test_performance.py  test_seed.py  test_uadp.py
(+404 files in other folders)
